adding report to git hub

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,3 +10,9 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
+
+      - name: Reports addition
+        uses: actions/upload-artifact@v4
+        with:
+            name: Mochawesome Html report
+            path: cypress\reports\html
