correction of parallel yml

--- a/.github/workflows/parallelbuild.yml
+++ b/.github/workflows/parallelbuild.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-            command: npm cypress run test:AddtoCArt
+            command: npm run test:AddtoCArt
 
   registertest-run:
     runs-on: ubuntu-24.04
@@ -23,4 +23,4 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-            command: npm cypress run test:registertest           
+            command: npm run test:registertest           
