--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
+        with:
+            command: npm run test:AddtoCArt
 
       - name: Reports addition
         uses: actions/upload-artifact@v4
