--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,4 +17,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
             name: Mochawesome Html report
-            path: cypress\reports\html\index.html
+            path: cypress/reports/html
